changed image positions for mobile view

--- a/style.css
+++ b/style.css
@@ -181,7 +181,15 @@ button:hover {
 }
 
 @media (max-width: 1000px) {
+    
+    #image-1 {
+        right: -500px;
+    }
 
+    #image-2 {
+        left: -450px;
+    }
+    
     .top-container {
         position: fixed;
         top: 0;
