--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 .toggle-bar {
-    margin-top: 50px;
+    margin-top: 40px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -46,7 +46,7 @@ h1 {
 }
 
 .card-container {
-    margin-top: 175px;
+    margin-top: 115px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -193,8 +193,10 @@ button:hover {
     .top-container {
         position: fixed;
         top: 0;
-        z-index: 3;
+        z-index: 1;
         width: 100%;
+        background-color: #f7f7ff;
+        opacity: 1;
     }
 
     .toggle-bar {
